--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,19 @@
 <!-- your html code here -->
 <p>Hello, I'm the first_heading.html</p>
+
+<div class="container text-center">
+    <div class="row">
+      <div class="col-8">
+        <h1 style="color: black ;">
+           <strong>This First Heading</strong> Will Catch Your Eye
+        </h1>
+        <p>
+            Donec ullamcorper nulla non metus auctor fringilla. Vestubulum id lingua porta felist euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce depibus, tellus ac cursus commodo.
+        </p>
+        
+      </div>
+      <div class="col-4 text-center">
+        <img src="https://wii4everybody.wordpress.com/wp-content/uploads/2010/04/ozlfacewii.png" class="img-fluid" alt="...">
+      </div>
+     </div>
+  </div>
