--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,2 +1,25 @@
 <!-- your html code here -->
-<p>Hello, I'm the navbar.html</p>
+<nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <span class="navbar-brand">Start Bootstrap</span>
+  
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <span class="nav-link active text-reset" aria-current="page">About</span>
+          </li>
+          <li class="nav-item">
+            <span class="nav-link text-reset">Services</span>
+          </li>
+          <li class="nav-item">
+            <span class="nav-link text-reset">Portfolio</span>
+          </li>
+          <li class="nav-item">
+            <span class="nav-link disabled text-reset" aria-disabled="true">Contact</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  
