--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,38 @@
-<!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<!-- Contenedor para organizar la cabecera del texto -->
+
+<div class="container">
+    <h1>
+        Contact
+    </h1>
+    <p>
+        Esto es el formulario de contacto, deberás rellenar los 2 campos correctamente para poder ser atendido por el departamento de atenciçon al cliente. Para ello podemos darle al botón de de enviar. 
+    </p>
+
+    
+
+</div>
+
+<!-- Contenedor para organizar el formulario -->
+
+
+<div class="container bg-secondary rounded-3 " style="max-width: 50%; ">
+    <form class="p-3">
+        <div class="mb-3 d-flex justify-content-between">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" style="max-width: 600px;">
+          </div>
+
+          <div class="mb-3 d-flex justify-content-between">
+            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="max-width: 600px;"></textarea>
+          </div>
+
+          <div class="d-flex justify-content-end">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+          
+    </form>
+    
+</div>
+
+
