--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="row">
         <div class="col-lg-12">
-            <p>Copyright &copy; Your Website Name 2021</p>
+            <p>Copyright &copy; Services and other projects LLC</p>
         </div>
     </div>
 </footer>
