[sp-93] feat:portfolio

--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,48 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<div class="container my-5">
+    <h3>Porfolio</h3>
+    <p>donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
+        commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cusus commodo.</p>
+    <div class="row text-center">
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="bg-light border">
+                <img src="https://educativo.ign.es/atlas-didactico/ciudades-bach/09_00_plano_activ_eso_ciudad.jpg"
+                    alt="" class="img-fluid">
+            </div>
+            
+        <div class=" p-3">
+                <h5>proyect Name</h5>
+                <p class="text-muted">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
+                    pellentesque urna varius vitae.
+                </p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="bg-light border">
+                <img src="https://educativo.ign.es/atlas-didactico/ciudades-bach/09_00_plano_activ_eso_ciudad.jpg"
+                    alt="" class="img-fluid">
+            </div>
+            <div class="p-3">
+                <h5>proyect Name</h5>
+                <p class="text-muted">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
+                    pellentesque urna varius vitae.
+                </p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="bg-light border">
+                <img src="https://educativo.ign.es/atlas-didactico/ciudades-bach/09_00_plano_activ_eso_ciudad.jpg"
+                    alt="" class="img-fluid">
+        </div>
+        <div class=" p-3">
+                <h5>proyect Name</h5>
+                <p class="text-muted">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
+                    pellentesque urna varius vitae.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
