--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,2 +1,15 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
+
+<div class="position-relative text-center">
+    <img src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y2l1ZGFkfGVufDB8fDB8fHww" class="img-fluid w-100" alt="cityscape">
+    <div class="position-absolute top-50 start-50 translate-middle bg-white bg-opacity-75 p-4 rounded">
+        <h1 class="display-4 fw-bold">One Page Wonder</h1>
+        <h2 class="h4 mt-4">Wil Knock Your Socks Off</h2>
+    </div>
+</div>
+<script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  ></script>
+
+
